# CNextWind

./: .gitignore  .pre-commit-config.yaml  README.md  chatGPTWindCNext.py  chatGPTWindCNext2.py  pyproject.toml
.github/workflows/: linting-ci.yaml
src/wind_ai/: server.py
src/wind_ai/utils/: server_utils.py
